--- a/lab1/doc1.html
+++ b/lab1/doc1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <title>Page Title</title>
 </head>
 <body>
@@ -10,15 +11,15 @@
 	<span style="color:black"><h3>Снижение загрязнения внешней среды</h3></span>
 	<ol>
 		<li><p><a href="doc2.html">Audi</a><p></li>
-		<img src="audi.png" alt="Smiley face" height="42" width="42">
+		<img src="images/audi.png" alt="Smiley face" height="42" width="42">
 		<li><p><a href="doc3.html">BMW</a><p></li>
-		<img src="bmw.png" alt="Smiley face" height="42" width="42">
+		<img src="images/bmw.png" alt="Smiley face" height="42" width="42">
 	</ol>
 	<ul>	
 		<li><p><a href="doc4.html">Volvo</a><p></li>
-		<img src="volvo.png" alt="Smiley face" height="42" width="42">
+		<img src="images/volvo.png" alt="Smiley face" height="42" width="42">
 		<li><p><a href="doc5.html">Volkswagen</a></p></li>
-		<img src="vw.png" alt="Smiley face" height="42" width="42">
+		<img src="images/vw.png" alt="Smiley face" height="42" width="42">
 	</ul>	
 	<table style="width:100%">
   <tr>
@@ -37,7 +38,7 @@
     <td>94</td>
   </tr>
 </table>
-<img src="parking.jpg" alt="Smiley face" height="1000" width="1000" usemap="#parking">
+<img src="images/parking.jpg" alt="Smiley face" height="1000" width="1000" usemap="#parking">
 <map name="parking">
   <area shape="rect" coords="0,0,250,250" href="doc2.html" alt="Sun">
   <area shape="circle" coords="90,58,3" href="mercur.htm" alt="Mercury">
